# ogre_window_manager

./: CMakeLists.txt  README.md  loadConfig.xml
configs/: ogre_plugins_OLD.cfg  ogre_window_manager.lconf  visualmanager.lconf
include/: CMakeSharedHeaders.txt
include/ogre/: ogre_frame_handler.h  visualmanager.h  window.h
src/: interface.cpp  ogre_frame_handler.cpp  visualmanager.cpp  window.cpp
